--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
         "mockery/mockery": "1.0.0-alpha1",
         "phpunit/phpunit": "^6.1"
     },
+    "autoload": {
+        "psr-0" : {
+        "Proximate": "src/"
+      }
+    },
     "repositories": [
         {
             "type": "vcs",
